--- a/08-POO-2/08-POO-2/08-POO-2.csproj
+++ b/08-POO-2/08-POO-2/08-POO-2.csproj
@@ -42,6 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\Colaborador.cs" />
+    <Compile Include="Models\Gerente.cs" />
+    <Compile Include="Models\Trabajador.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
